@@ -53,6 +53,13 @@
     <sonar.login>admin</sonar.login>
     <sonar.password>admin</sonar.password>
     <sonar.java.binaries>target/classes</sonar.java.binaries>
+    <lombok.version>1.18.42</lombok.version>
+    <errorprone.version>2.42.0</errorprone.version>
+    <nullaway.version>0.12.10</nullaway.version>
+    <auto-value.version>1.11.1</auto-value.version>
+    <mockito.version>5.2.0</mockito.version>
+    <nullaway.annotatedPackages>com.google.fhir.analytics</nullaway.annotatedPackages>
+    <nullaway.excludedPaths>.*/target/generated-sources/.*</nullaway.excludedPaths>
   </properties>
 
   <build>
@@ -78,6 +85,84 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.14.1</version>
+        <configuration>
+          <fork>true</fork>
+          <parameters>true</parameters>
+          <compilerArgs>
+            <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+            <arg>-XDcompilePolicy=simple</arg>
+            <arg>--should-stop=ifError=FLOW</arg>
+            <arg>
+              -Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=${nullaway.annotatedPackages} -XepExcludedPaths:${nullaway.excludedPaths} -XepOpt:NullAway:JSpecifyMode=true -XepOpt:NullAway:CheckOptionalEmptiness=true
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+            </arg>
+            <arg>
+              -J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+            </arg>
+          </compilerArgs>
+          <annotationProcessorPaths>
+            <!-- TODO: Check if we can avoid these paths; see here for why:
+              https://errorprone.info/docs/installation#using-error-prone-together-with-other-annotation-processors
+            -->
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>${lombok.version}</version>
+            </path>
+            <path>
+              <groupId>com.google.auto.value</groupId>
+              <artifactId>auto-value</artifactId>
+              <version>${auto-value.version}</version>
+            </path>
+            <path>
+              <groupId>org.mockito</groupId>
+              <artifactId>mockito-inline</artifactId>
+              <version>${mockito.version}</version>
+            </path>
+            <path>
+              <groupId>com.google.errorprone</groupId>
+              <artifactId>error_prone_core</artifactId>
+              <version>${errorprone.version}</version>
+            </path>
+            <path>
+              <groupId>com.uber.nullaway</groupId>
+              <artifactId>nullaway</artifactId>
+              <version>${nullaway.version}</version>
+            </path>
+          </annotationProcessorPaths>
+        </configuration>
       </plugin>
 
       <!-- Code formatter -->
